ontotext-yasgui-web-component/src/components/saved-queries-popup/saved-queries-popup.scss
:host {
  display: block;
}

.saved-queries-container {
  position: absolute;
  // prevent CodeMirror stuff to overlap the popup
  z-index: 10;
  border: 1px solid #ccc;
  font-family: 'Roboto', 'Helvetica Neue', Arial, sans-serif;
  font-weight: 300;

  .saved-queries-popup {
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);

    ul {
      padding: 15px;
      margin: 0;

      .saved-query {
        list-style-type: none;

        a {
          text-decoration: none;

          &:hover {
            text-decoration: underline;
          }
        }
      }
    }
  }

  .arrow {
    position: absolute;
    display: block;
    right: calc(-0.5rem - 1px);
    width: 8px;
    height: 16px;
    margin: 0.3rem 0;

    &::before, &::after {
      position: absolute;
      display: block;
      content: "";
      border-color: transparent;
      border-style: solid;
    }

    &::before {
      right: 0;
      border-width: 0.5rem 0 0.5rem 0.5rem;
      border-left-color: rgba(0,0,0,.25);
    }

    &::after {
      right: 1px;
      border-width: 0.5rem 0 0.5rem 0.5rem;
      border-left-color: #fff;
    }
  }
}

